# backend

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  pytest.ini
.github/workflows/: prod_deploy.yml
app/: __init__.py  main.py
app/api/: api_router.py  deps.py
app/api/v1/: auth_endpoint.py  checks_endpoint.py  magic_endpoint.py  moderator_endpoint.py  profile_endpoint.py  rcc_endpoint.py  report_endpoint.py  router.py  steam_endpoint.py
app/core/: __init__.py  config.py  constants.py  delayed_tasks.py  security.py  time_assistant.py  utils.py
app/db/: __init__.py  declarative.py  session.py
app/db/crud/: __init__.py  base_crud.py  check_crud.py  moderator_crud.py  moderator_settings_crud.py  report_crud.py
app/db/models/: __init__.py  check_model.py  moderator_model.py  moderator_settings_model.py  report_model.py
app/db/schemas/: __init__.py  check_schemas.py  moderator_schemas.py  moderators_settings_schemas.py  report_schemas.py  utils.py
app/entities/: __init__.py  auth_entities.py  magic_rust_entites.py  report_entities.py  steam_entities.py
app/services/: api_client.py  http_client.py
app/services/RCC/: __init__.py  rcc_api.py  rcc_cache.py
app/services/magic_rust/: __init__.py  _urls.py  (+2 more)
docker/api/: Dockerfile
docker/nginx/: Dockerfile  backend.conf
migrations/: env.py
migrations/versions/: 4b9588975e80_.py  52eb9131568c_.py  55e687ca4033_.py  f84f13683eed_.py
tests/: conftest.py  test_mr_api.py  test_rcc_api.py
tests/fixtures/: api_client.py  db_session.py  mr_response.py  rcc_response.py
(+3 files in other folders)
